# puppy-kit

./: .gitignore  CLAUDE.md  README.md  TRANSFORMATION.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ddogctl/: cli.py  client.py
ddogctl/commands/: event.py  metric.py
docs/: compass_artifact_wf-9fc822ec-cfbf-44da-a662-aeaad778e45b_text_markdown.md  incident_api.md  ops-modes.md
puppy_kit/: __init__.py  cli.py  client.py  config.py  env.py
puppy_kit/commands/: apm.py  apply.py  ci.py  completion.py  config.py  cost.py  dashboard.py  dbm.py  downtime.py  event.py  host.py  incident.py  investigate.py  llm.py  logs.py  metric.py  monitor.py  notebook.py  rum.py  service_check.py  slo.py  synthetics.py  tag.py  usage.py  user.py
puppy_kit/mcp/: __init__.py  server.py
puppy_kit/utils/: error.py  format.py  mode.py  time.py
tests/: conftest.py  test_aliases.py  test_client.py  test_config.py  test_config_profiles.py  test_integration.py  test_mode_gating.py
tests/commands/: test_apm.py  test_apply.py  test_ci.py  test_completion.py  test_config.py  test_dashboard.py  test_dbm.py  test_downtime.py  test_event.py  test_host.py  test_incident.py  test_investigate.py  test_llm.py  test_logs.py  test_metric.py  test_monitor.py  test_notebook.py  test_rum.py  test_service_check.py  test_slo.py  test_stdin_integration.py  test_synthetics.py  test_tag.py  test_usage.py  test_user.py
tests/utils/: test_confirm.py  test_error.py  test_exit_codes.py  test_export.py  test_file_input.py  test_output.py  test_stdin.py  test_tags.py  test_time.py  test_watch.py
