[build-system]
requires = ["hatchling>=1.24.2", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "puppy-kit"
dynamic = ["version"]
description = "Datadog CLI + MCP server for AI-driven incident management."
authors = [
    {name = "Willem van der Schans"},
]
maintainers = [
    {name = "Willem van der Schans"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["datadog", "cli", "mcp", "monitoring", "observability", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-api-client>=2.29.0",
    "click>=8.1.7",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "python-dateutil>=2.9.0",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "jinja2>=3.1.5",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]

[project.scripts]
puppy = "puppy_kit.cli:run"
puppy-kit = "puppy_kit.cli:run"

[project.urls]
Homepage = "https://github.com/WrenchAI/puppy-kit"
Issues = "https://github.com/WrenchAI/puppy-kit/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "puppy_kit/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests (use -m 'not integration' to skip)",
]

[tool.ruff]
line-length = 100
